[package]
name = "paperwok"
version = "0.0.1"
authors = ["Enrico Lovisotto <enricolovisotto@gmail.com>"]

[dependencies]
bson = "0.10.0"
mongodb = "0.3.7"
dotenv = "0.11.0"
regex = "0.2"
lazy_static = "1.0.0"
serde = "1.0.27"
serde_derive = "1.0.27"
serde_json = "1.0"
derive_builder = "0.5.1"
rocket = "0.3.6"
rocket_codegen = "0.3.6"
rocket_contrib = "0.3.6"